:lipstick: Minor change to article link hover to prevent further reading links from wrapping

--- a/src/styles/article.css
+++ b/src/styles/article.css
@@ -176,7 +176,7 @@ main.article * {
 
 .article a:not(.footnote-return):hover {
 	font-style: italic;
-	letter-spacing: 0.01em;
+	letter-spacing: 0.02em;
 }
 
 .article sup {
